Minor edits + footer links open in new tabs now

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 </head>
 
 <body>
-
-	<!-- HTML elements here -->
+<!--  html start here -->
   
-  <div class="deconstructed" style="text-align: center;">
+  
+<div class="deconstructed" style="text-align: center;">
   A Shooting Star
   <div>A Shooting Star</div>
   <div>A Shooting Star</div>
@@ -41,7 +41,7 @@
 </div>
 
 <div class="row">
-  <div class="column side"><h2>Bloop</h2></div>
+  <div class="column side"><h2></h2></div>
   
   <div class="column middle">
     
@@ -60,15 +60,17 @@
     </div>
   </div>
   
-  <div class="column side"><h2>Bloop</h2></div>
+  <div class="column side"><h2></h2></div>
                            
 </div>
 
 <div class="footer">
-  <p>Story and Website by <a href="url">Max Ciot</a><br>Background Image from <a href="https://wallpaperaccess.com/magical-forest"> Wallpaper Access</a><br>Fancy Text from <a href="https://devsnap.me/css-text-effect">DevSnap</a><br>Malow Cat Mouse from <a href="https://custom-cursor.com/en/collection/funny-cats/malow-cat-thurston-waffles">Custom-Cursor</a></p>
+  <p>Story and Website by <a href="https://maxciot.com/" target="https://maxciot.com/">Max Ciot</a><br>Background Image from <a href="https://wallpaperaccess.com/magical-forest" target="https://wallpaperaccess.com/magical-forest"> Wallpaper Access</a><br>Fancy Text from <a href="https://devsnap.me/css-text-effect" target="https://devsnap.me/css-text-effect">DevSnap</a><br>Malow Cat Mouse from <a href="https://custom-cursor.com/en/collection/funny-cats/malow-cat-thurston-waffles" target="https://custom-cursor.com/en/collection/funny-cats/malow-cat-thurston-waffles">Custom-Cursor</a></p>
 </div>
   
-
+  
+  
+<!--   html end here -->
 </body>
 
 </html>
