The options have ids and are clicky now uwu

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <div class = wrapperb>
       <button id="start" onclick="start()">Start</button>
-      <button id="restart" onclick="start()">Restart</button>
+      <button id="restart" onclick="window.location.reload()">Restart</button>
     </div>
   </div>
   
